--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,8 @@
 @tailwind utilities;
 
 #app {
+  background-color: rgb(31 41 55);
+  /* background-color: hsla(160, 100%, 37%, 0.2); */
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -25,14 +27,14 @@ a,
 }
 
 @media (min-width: 1024px) {
-  body {
+  /* body {
     display: flex;
     place-items: center;
-  }
+  } */
 
   #app {
-    display: grid;
+    /* display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+    padding: 0 2rem; */
   }
 }
